--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
+    "static": "next build && next export",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,8 +19,10 @@
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "next-sitemap": "^2.5.20",
     "typescript": "4.6.3"
   }
 }
