--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
-    "presets": ["next/babel"],
-    "plugins": [
-        ["transform-remove-console", {
-            "exclude": ["error", "wran"]
-        }]
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "transform-remove-console",
+      {
+        "exclude": ["error", "warn"]
+      }
     ]
+  ]
 }
