--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "static": "next build && next export",
-    "postbuild": "next-sitemap",
+    "postbuild": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,10 +19,21 @@
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/typescript-estree": "^5.20.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "8.13.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "next-sitemap": "^2.5.20",
+    "prettier": "^2.6.2",
     "typescript": "4.6.3"
   }
 }
