--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,13 @@
     "node": true,
     "es6": true
   },
-  "extends": ["next/core-web-vitals", "plugin:import/errors", "prettier"],
+  "extends": ["next/core-web-vitals", "eslint:recommended"],
   "plugins": ["@typescript-eslint", "import"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "tsconfigRootDir": "."
   },
   "rules": {
-    "@next/next/no-img-element": "off"
+    //"@next/next/no-img-element": "off"
   }
 }
