--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "static": "next build && next export",
     "postbuild": "next build && next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "**/*.{tsx,ts,jsx,js}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "next": "12.1.5",
@@ -32,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "husky": "^7.0.4",
     "next-sitemap": "^2.5.20",
     "prettier": "^2.6.2",
     "typescript": "4.6.3"
