--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "**/*.{tsx,ts,jsx,js}": [
-      "eslint --fix"
-    ]
+    "*.{js,jsx,ts,tsx}": "next lint"
   },
   "dependencies": {
     "next": "12.1.5",
