--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,30 @@
     "node": true,
     "es6": true
   },
-  "extends": ["next/core-web-vitals", "eslint:recommended"],
-  "plugins": ["@typescript-eslint", "import"],
   "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "airbnb",
+    "airbnb-typescript",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/jsx-runtime",
+    "prettier"
+  ],
   "parserOptions": {
-    "tsconfigRootDir": "."
+    "project": "./tsconfig.json"
   },
   "rules": {
-    //"@next/next/no-img-element": "off"
-  }
+    "@next/next/no-img-element": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "arrow-body-style": ["off", "always"]
+  },
+  "ignorePatterns": ["commitlint.config.js", ".lintstagedrc.js"]
 }
