--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "postbuild": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "next lint"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -21,6 +17,8 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
@@ -33,11 +31,11 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
+    "lint-staged": "^12.4.0",
     "next-sitemap": "^2.5.20",
     "prettier": "^2.6.2",
     "typescript": "4.6.3"
