fix(config): Commitlintの設定を一部変更するテストです。
本文はこのように入ります。

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,5 +29,5 @@
     ],
     "arrow-body-style": ["off", "always"]
   },
-  "ignorePatterns": ["commitlint.config.js", ".lintstagedrc.js"]
+  "ignorePatterns": [".lintstagedrc.js", "next.config.js"]
 }
