--- a/.editorconfig
+++ b/.editorconfig
@@ -1,25 +1,18 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
+# EditorConfigのファイル位置はProjectRootなのか
 root = true
 
-# Unix-style newlines with a newline ending every file
+# 改行スタイル指定（Unix style = lf) 最後に改行を追加するかどうか
 [*]
 end_of_line = lf
 insert_final_newline = false
 
-# Matches multiple files with brace expansion notation
-# Set default charset
+# 拡張子の指定
 [*.{js,ts,jsx,tsx}]
 charset = utf-8
 indent_style = space
 indent_size = 2
 
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
-
-# Matches the exact files either package.json or .travis.yml
+# JSONの別途設定
 [*.{json}]
 indent_style = space
 indent_size = 2
