update(babel, eslint, tsconfig): 設定を追加
tsconfig: BaseUrlを ./srcに、Pathsで基本aliasを追記
babel: envを追加、Remove ConsoleをProductionに限定
eslint: rulesを変更

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": ["next/babel"],
-  "plugins": [
-    [
-      "transform-remove-console",
-      {
-        "exclude": ["error", "warn"]
-      }
-    ]
-  ]
+  "env": {
+    "production": {
+      "plugins": [
+        ["transform-remove-console", { "exclude": ["error", "warn"] }]
+      ]
+    }
+  },
+  "plugins": []
 }
