--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "no-console": "off",
     "@next/next/no-img-element": "off",
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": [
