--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,10 @@
   },
   "rules": {
     "no-console": "off",
+    "consistent-return": "off",
+    "import/no-named-as-default": "off",
     "@next/next/no-img-element": "off",
+    "react/jsx-no-useless-fragment": "off",
     "react/jsx-props-no-spreading": "off",
     "react/function-component-definition": [
       2,
