--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "static": "next build && next export",
-    "postbuild": "next build && next-sitemap",
+    "prebuild": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -21,6 +21,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@commitlint/parse": "^16.2.1",
     "@commitlint/types": "^16.2.1",
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
@@ -33,6 +34,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
