--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/img/*": ["src/assets/img/*"],
       "@/pages/*": ["src/pages/*"],
       "@/layout/*": ["src/components/layout/*"],
-      "@/utils/*": ["src/utils/*"]
+      "@/lib/*": ["src/lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
