--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+#Auto Gen sitemap Files
+public/sitemap.xml
+public/sitemap-0.xml
+public/robots.txt
