--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "next-ts-template",
   "version": "0.1.0",
+  "module": "es2022",
   "private": true,
   "scripts": {
     "dev": "next dev",
