--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-ts-template",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "module": "es2022",
   "private": true,
   "scripts": {
@@ -12,35 +12,38 @@
     "lint": "next lint",
     "prepare": "husky install"
   },
+  "engines": {
+    "node": ">=16.8.0"
+  },
   "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@commitlint/parse": "^17.0.0",
     "@commitlint/types": "^17.0.0",
-    "@types/gtag.js": "^0.0.10",
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
+    "@types/gtag.js": "^0.0.12",
+    "@types/node": "18.11.19",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "@typescript-eslint/typescript-estree": "^5.30.6",
-    "eslint": "8.20.0",
+    "eslint": "8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "lint-staged": "^13.0.3",
-    "next-sitemap": "^3.1.11",
+    "next-sitemap": "^3.1.49",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
