update: vscode settings タイプスクリプト設定（tsconfig.json)の自動点検を入れる。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
   "editor.formatOnType": false,
   "eslint.codeAction.showDocumentation": {
     "enable": true
-  }
+  },
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
