--- a/package.json
+++ b/package.json
@@ -13,35 +13,41 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "13.1.6",
+    "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@commitlint/parse": "^17.0.0",
-    "@commitlint/types": "^17.0.0",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/parse": "^17.6.5",
+    "@commitlint/types": "^17.4.4",
+    "@svgr/webpack": "^8.0.1",
     "@types/gtag.js": "^0.0.12",
-    "@types/node": "18.11.19",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "@typescript-eslint/typescript-estree": "^5.30.6",
-    "eslint": "8.33.0",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/typescript-estree": "^5.59.9",
+    "eslint": "8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "13.1.6",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-next": "13.4.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "file-loader": "^6.2.0",
+    "glslify-loader": "^2.0.0",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "next-sitemap": "^3.1.49",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "lint-staged": "^13.2.2",
+    "next-sitemap": "^4.1.3",
+    "prettier": "^2.8.8",
+    "raw-loader": "^4.0.2",
+    "typescript": "^5.1.3"
   }
 }
