--- a/package.json
+++ b/package.json
@@ -7,47 +7,45 @@
     "dev": "next dev",
     "build": "next build",
     "static": "next build && next export",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "13.4.4",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.3"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
-    "@commitlint/parse": "^17.6.5",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@commitlint/parse": "^17.7.0",
     "@commitlint/types": "^17.4.4",
-    "@svgr/webpack": "^8.0.1",
-    "@types/gtag.js": "^0.0.12",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
+    "@svgr/webpack": "^8.1.0",
+    "@types/gtag.js": "^0.0.13",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@typescript-eslint/typescript-estree": "^5.59.9",
-    "eslint": "8.42.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/typescript-estree": "^6.5.0",
+    "eslint": "8.48.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "13.4.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "glslify-loader": "^2.0.0",
     "husky": "^8.0.1",
-    "lint-staged": "^13.2.2",
-    "next-sitemap": "^4.1.3",
-    "prettier": "^2.8.8",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
     "raw-loader": "^4.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   }
 }
